refactor: 가맹점 이름 정규화 패턴 추가